# ComputerVision

./: .gitignore  pyproject.toml
Day1/: activation_comparison.html  activation_comparison.ipynb  class_codes.ipynb  forward_propagation_neuron.html  forward_propagation_neuron.ipynb  linear_combination.html  linear_combination.ipynb  multi_layer_forward.html  multi_layer_forward.ipynb  sigmoid_debug.html  sigmoid_debug.ipynb
Day10/: blood_cell_pipeline.ipynb  blood_cell_simulation.ipynb  image_segmentation.ipynb  prediction_visualization.ipynb  unet_segmentation.ipynb
Day2/: bce_gradient_descent.html  bce_gradient_descent.ipynb  class_codes.ipynb  gradient_computation.html  gradient_computation.ipynb  gradient_descent.html  gradient_descent.ipynb  loss_and_learning_rates.html  loss_and_learning_rates.ipynb  loss_functions.html  loss_functions.ipynb
Day3/: class_codes.ipynb  dropout_active_neurons.html  dropout_active_neurons.ipynb  dropout_and_batch_statistics.html  dropout_and_batch_statistics.ipynb  mean_variance.html  mean_variance.ipynb  nn_stabilization_computations.html  nn_stabilization_computations.ipynb  weights_and_biases_computation.html  weights_and_biases_computation.ipynb
Day4/: lstm_cell_state_computation.html  lstm_cell_state_computation.ipynb  lstm_fraud_detection.html  lstm_fraud_detection.ipynb  lstm_model_sequence.html  lstm_model_sequence.ipynb  rnn_hidden_state_computation.html  rnn_hidden_state_computation.ipynb  rnn_hidden_state_computation_2.html  rnn_hidden_state_computation_2.ipynb
Day5/: automatic_attention.html  bert_sentiment.html  (+9 more)
(+101 files in other folders)
