[project]
name = "computervision"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "keras-nightly>=3.15.0.dev2026062205",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.3",
    "pandas-stubs~=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
    "torchvision>=0.27.1",
    "transformers>=5.12.1",
]
